Подключил шрифты MuseoSans reg и bold

--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -9,13 +9,13 @@
 		&__title
 			margin-top: 25px
 			margin-bottom: 40px
+			+bold
 			font-size: 41px
-			font-weight: 700
 			line-height: 55px
 		&__subtitle
 			margin: 0
+			+bold
 			font-size: 20px
-			font-weight: 700
 	&-list
 		margin-top: 65px
 		padding: 0
@@ -37,7 +37,6 @@
 		&__text
 			margin: 0
 			font-size: 14px
-			font-weight: 400
 			line-height: 24px
 	&-img
 		max-width: 570px
