--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,21 @@
+@font-face {
+  font-family: 'Museo Sans Light';
+  src: url("../fonts/MuseoSans/MuseoSansCyrl-300.eot");
+  src: url("../fonts/MuseoSans/MuseoSansCyrl-300.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-300.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-300.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Museo Sans Bold';
+  src: url("../fonts/MuseoSans/MuseoSansCyrl-700.eot");
+  src: url("../fonts/MuseoSans/MuseoSansCyrl-700.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-700.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-700.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
-  font-family: "Arial", sans-serif;
+  font-family: 'Museo Sans Light', sans-serif;
   color: #333333;
 }
 
@@ -57,22 +73,21 @@ body {
 
 .navbar__address {
   font-size: 13px;
-  font-weight: 400;
 }
 
 .navbar__phone {
+  margin-top: 9px;
   text-decoration: none;
   color: #333333;
+  font-family: 'Museo Sans Bold', sans-serif;
   font-size: 20px;
-  font-weight: 400;
-  margin-top: 9px;
 }
 
 .navbar__button {
   margin-left: 30px;
   padding: 18px 30px;
+  font-family: 'Museo Sans Bold', sans-serif;
   font-size: 13px;
-  font-weight: 400;
 }
 
 @media (max-width: 767px) {
@@ -107,15 +122,15 @@ body {
 .header-description__title {
   margin-top: 25px;
   margin-bottom: 40px;
+  font-family: 'Museo Sans Bold', sans-serif;
   font-size: 41px;
-  font-weight: 700;
   line-height: 55px;
 }
 
 .header-description__subtitle {
   margin: 0;
+  font-family: 'Museo Sans Bold', sans-serif;
   font-size: 20px;
-  font-weight: 700;
 }
 
 .header-list {
@@ -145,7 +160,6 @@ body {
 .header-list__text {
   margin: 0;
   font-size: 14px;
-  font-weight: 400;
   line-height: 24px;
 }
 
