--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -13,18 +13,17 @@
 		display: block
 	&__address
 		font-size: 13px
-		font-weight: 400
 	&__phone
+		margin-top: 9px
 		text-decoration: none
 		color: $text-color
+		+bold
 		font-size: 20px
-		font-weight: 400
-		margin-top: 9px
 	&__button
 		margin-left: 30px
 		padding: 18px 30px
+		+bold
 		font-size: 13px
-		font-weight: 400
 @media (max-width: 767px)
 	.navbar
 		&-wrap
