--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,7 @@ body {
 }
 
 .button {
+  font-family: 'Museo Sans Bold', sans-serif;
   border: none;
   border-radius: 10px;
   background-color: #ffd200;
